--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://spmugesh.github.io/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.3"
   }
 }
