--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://spmugesh.github.io/",
+  "homepage": "http://mushiboy.github.io/personal-website",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
