--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://mushiboy.github.io/personal-website",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -22,9 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.3"
   }
 }
