--- a/my-app/package.json
+++ b/my-app/package.json
@@ -42,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
-    "tailwindcss": "^3.3.3",
-    "@babel/plugin-transform-private-property-in-object": "^7.16.5"  }
+    "tailwindcss": "^3.3.3"
+  }
 }
