--- a/my-app/package.json
+++ b/my-app/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "@babel/plugin-transform-private-property-in-object": "^7.16.5"
   }
 }
